<resources>
    <string name="app_name">PrecoJusto</string>
    <string name="nomeProduto">Nome do produto</string>
    <string name="valorProduto">Valor</string>
    <string name="qtdParcelas">Qtd. de Parcelas</string>
    <string name="juros">Juros(%)</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnApagar">Limpar Dados</string>
    <string name="Produto">Produto</string>
    <string name="valorInicial">Valor Inicial</string>
    <string name="valorParcelas">Valor Parcelas</string>
    <string name="valorTotal">Valor Total</string>
    <string name="totalJuros">Total de Juros</string>
    <string name="hint_produto">Digite o nome do produto</string>
    <string name="hint_valor">Digite o valor do produto</string>
    <string name="hint_parcelas">qtd parcelas</string>
    <string name="hint_juros">0</string>
</resources>
